[gd_scene load_steps=6 format=2]

[ext_resource path="res://Players and Enemies/Enemies/Enemy.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
resource_local_to_scene = true
albedo_color = Color( 0, 1, 0, 1 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.2, 0.2, 2.433 )

[sub_resource type="CapsuleShape" id=4]

[node name="Enemy" type="KinematicBody" groups=["Enemy"]]
script = ExtResource( 1 )
timer_look_at_path = NodePath("LookAt")

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.824, -0.331863 )
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Area" type="Area" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -1.12777 )
collision_layer = 4
collision_mask = 4

[node name="CollisionPolygon" type="CollisionPolygon" parent="Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
polygon = PoolVector2Array( 0, 0, 15, 6, 15, -6 )

[node name="LookAt" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="LookAt" to="." method="_on_LookAt_timeout"]
